--- a/ADC.html
+++ b/ADC.html
@@ -66,6 +66,15 @@
                         <input id="last_name" type="text" class="validate">
                         <label for="last_name">Remarks</label>
                       </div>
+                      <div class="input-field col s12">
+                        <select>
+                          <option value="" disabled selected>Choose your option</option>
+                          <option value="1">Option 1</option>
+                          <option value="2">Option 2</option>
+                          <option value="3">Option 3</option>
+                        </select>
+                        <label>Materialize Select</label>
+                      </div>
                    </div>
                   </form>
                 </div>
